@@ -7,7 +7,7 @@ use SDL::Tutorial::3DWorld::Actor  ();
 use SDL::Tutorial::3DWorld::OpenGL ();
 use OpenGL::List                   ();
 
-our $VERSION = '0.24';
+our $VERSION = '0.25';
 our @ISA     = 'SDL::Tutorial::3DWorld::Actor';
 
 sub new {
