@@ -21,7 +21,7 @@ use strict;
 use warnings;
 use SDL::Tutorial::3DWorld::OpenGL ();
 
-our $VERSION = '0.24';
+our $VERSION = '0.25';
 
 1;
 
