@@ -37,7 +37,7 @@ use Time::HiRes                    ();
 use SDL::Tutorial::3DWorld         ();
 use SDL::Tutorial::3DWorld::OpenGL ();
 
-our $VERSION = '0.24';
+our $VERSION = '0.25';
 
 # Turn OpenGL fake "constants" into real compile-time optimised constants
 use constant {
